// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Domain /> <TestDomain /> should render correctly with ACTIVE status 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <form
    className="sc-bcXGCL hoKWeu"
    id="custom-domain-form"
    onSubmit={[Function]}
  >
    <h4
      className="sc-bcXGCL kffmQt cap-heading"
    >
      domain.name
    </h4>
    <div
      className="sc-bcXGCL iVJsrM"
    >
      <div
        className="sc-bcXGCL bYxiyO"
      >
        <div
          className="sc-bcXGCL fTyUUX"
        >
          <p
            className="sc-bcXGCL jpifeG cap-text"
          >
            capco.subdomain
          </p>
          <p
            className="sc-bcXGCL kxBQAH cap-text"
          >
            capco.subdomain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL iNCvnU cap-form-control"
      >
        <label
          className="sc-bcXGCL jfvNeV cap-form-label"
          htmlFor="subDomain"
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <span
            className="sc-bcXGCL dQChsN cap-text"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            sub-domain
          </span>
        </label>
        <input
          aria-required={true}
          className="sc-bcXGCL sc-dwnPIk egzrup euPyfY cap-input"
          disabled={true}
          id="subDomain"
          name="subDomain"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="admiun.project.create.title.placeholder"
          readOnly={false}
          required={true}
          type="text"
          value="capco.domain.com"
        />
      </div>
    </div>
    <div
      className="sc-bcXGCL lcYpuI"
    >
      <div
        className="sc-bcXGCL bYxiyO"
      >
        <div
          className="sc-bcXGCL fTyUUX"
        >
          <p
            className="sc-bcXGCL jpifeG cap-text"
          >
            custom-domain
          </p>
          <p
            className="sc-bcXGCL kxBQAH cap-text"
          >
            custom-domain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL bYxiyO"
      >
        <div
          className="sc-bcXGCL iNCvnU cap-form-control"
        >
          <label
            className="sc-bcXGCL jfvNeV cap-form-label"
            htmlFor="customDomain"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <span
              className="sc-bcXGCL dQChsN cap-text"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              custom-domain-name
            </span>
          </label>
          <span
            className="sc-bcXGCL ifYgMR cap-form-guideline"
          >
            domain.must.point.to.cname
            <p
              className="sc-bcXGCL kxBQAH cap-text"
            >
              domain.save.help
            </p>
          </span>
          <div
            className="sc-bcXGCL dWgVIC cap-input-group"
          >
            <div
              className="sc-bcXGCL bIFsXi"
            >
              <div
                aria-label="Tag custom.domain.com"
                className="sc-bcXGCL cPzLeP cap-tag"
                onBlur={[Function]}
                onFocus={[Function]}
                title="custom.domain.com"
              >
                <span
                  className="sc-bcXGCL lnyRPA cap-tag__label"
                >
                  custom.domain.com
                </span>
                <button
                  aria-label="Remove custom.domain.com"
                  className="sc-bcXGCL sc-gGvGpy hrfuWy cITHqt cap-button cap-tag__closeButton"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="sc-bcXGCL sc-oZHua drcQcK fOGDXF cap-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 12 12"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 11 11 1M1 1l10 10"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth={0.8}
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="delete-custom-domain"
      aria-modal={true}
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      role="dialog"
      style={
        {
          "display": "none",
        }
      }
      tabIndex={-1}
    />
  </form>,
]
`;

exports[`<Domain /> <TestDomain /> should render correctly with IDLE status 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <form
    className="sc-bcXGCL hoKWeu"
    id="custom-domain-form"
    onSubmit={[Function]}
  >
    <h4
      className="sc-bcXGCL kffmQt cap-heading"
    >
      domain.name
    </h4>
    <div
      className="sc-bcXGCL iVJsrM"
    >
      <div
        className="sc-bcXGCL bYxiyO"
      >
        <div
          className="sc-bcXGCL fTyUUX"
        >
          <p
            className="sc-bcXGCL jpifeG cap-text"
          >
            capco.subdomain
          </p>
          <p
            className="sc-bcXGCL kxBQAH cap-text"
          >
            capco.subdomain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL iNCvnU cap-form-control"
      >
        <label
          className="sc-bcXGCL jfvNeV cap-form-label"
          htmlFor="subDomain"
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <span
            className="sc-bcXGCL dQChsN cap-text"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            sub-domain
          </span>
        </label>
        <input
          aria-required={true}
          className="sc-bcXGCL sc-dwnPIk egzrup euPyfY cap-input"
          disabled={true}
          id="subDomain"
          name="subDomain"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="admiun.project.create.title.placeholder"
          readOnly={false}
          required={true}
          type="text"
          value="capco.domain.com"
        />
      </div>
    </div>
    <div
      className="sc-bcXGCL lcYpuI"
    >
      <div
        className="sc-bcXGCL bYxiyO"
      >
        <div
          className="sc-bcXGCL fTyUUX"
        >
          <p
            className="sc-bcXGCL jpifeG cap-text"
          >
            custom-domain
          </p>
          <p
            className="sc-bcXGCL kxBQAH cap-text"
          >
            custom-domain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL bYxiyO"
      >
        <div
          className="sc-bcXGCL iNCvnU cap-form-control"
        >
          <label
            className="sc-bcXGCL jfvNeV cap-form-label"
            htmlFor="customDomain"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <span
              className="sc-bcXGCL dQChsN cap-text"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              custom-domain-name
            </span>
          </label>
          <span
            className="sc-bcXGCL ifYgMR cap-form-guideline"
          >
            domain.must.point.to.cname
            <p
              className="sc-bcXGCL kxBQAH cap-text"
            >
              domain.save.help
            </p>
          </span>
          <div
            className="sc-bcXGCL dWgVIC cap-input-group"
          >
            <input
              className="sc-bcXGCL sc-dwnPIk egzrup euPyfY cap-input"
              disabled={false}
              id="customDomain"
              name="customDomain"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="custom-domain-placeholder"
              readOnly={false}
              required={false}
              type="text"
            />
            <button
              className="sc-bcXGCL sc-gGvGpy hSrtJu jrAhSN cap-button"
              disabled={true}
              type="submit"
            >
              global.use
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="delete-custom-domain"
      aria-modal={true}
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      role="dialog"
      style={
        {
          "display": "none",
        }
      }
      tabIndex={-1}
    />
  </form>,
]
`;
